# hacks

./: .gitignore  LICENSE  Makefile.am  Makefile.common  configure.ac  meson.build
include/: Makefile.am
include/hacks/: _config.hh  _config.hpp  aho-corasick.hh  aho-corasick.hpp  alphabet.hh  alphabet.hpp  config.hh  config.hpp  defs.hh  defs.hpp  knuth-morris-pratt.hh  knuth-morris-pratt.hpp  suffix-array.hh  suffix-array.hpp  suffix-tree.cc  suffix-tree.hh  suffix-tree.hpp
m4/: opencv.m4
src/: Makefile.am  meson.build
src/aho-corasick/: t.cc  t.cpp
src/cluster/: Makefile.am  blob.cc  blob.cpp  meson.build  subgraph.cc  t.cpp  t1.txt  t2.txt
src/count-occurrences/: Makefile.am  t.cpp
src/cyclic-rotation/: t.cc  t.cpp
src/cyclic-substring/: t.cc  t.cpp
src/knuth-morris-pratt/: t.cc  t.cpp
src/lcs/: t.cc  t.cpp
src/lexicographical-merge/: Makefile.am  t.cc
src/longest-prefix/: t.cc
src/longest-prefix-suffix/: Makefile.am  t.cc  t.cpp
src/lps/: t.cc  t.cpp
src/lrf/: t.cc  t.cpp
src/make-anagram/: Makefile.am  t.cpp
src/manacher/: t.cc
src/maximize-anagram/: t.cc
src/maximum-palindromes/: t.cc  t.cpp
src/palindrome-index/: Makefile.am  t.cpp
src/palindromes/: t.cpp
src/perf/: Makefile.am  find.cpp
src/reduced-string/: t.cc  t.cpp  test.txt
src/steady-gene/: meson.build  t.cpp
src/string-function/: Makefile.am  count-factors.cpp  count-leaves.cpp  count-prefixes  count-prefixes.cpp  t.cpp
src/suffix-array/: Makefile.am  meson.build  suffix-array.cpp  suffix_array.cc  t.cc  t.cpp
src/suffix-tree/: Makefile.am  other.cpp  suffix-tree.cpp  t.cc  t.cpp
src/tandem-arrays/: t.cc  t.cpp
src/two-characters/: t.cc  test.txt
src/unordered-annagramatic/: t.cpp
