## -*- mode: makefile -*-

nobase_include_HEADERS =                        \
    hacks/_config.hpp                           \
    hacks/config.hpp                            \
    hacks/defs.hpp                              \
    hacks/aho-corasick.hpp                      \
    hacks/knuth-morris-pratt.hpp                \
    hacks/suffix-array.hpp                      \
    hacks/suffix-tree.hpp
