subdir('suffix-tree')
subdir('suffix-array')
subdir('aho-corasick')
subdir('cluster')
subdir('cyclic-rotation')
subdir('cyclic-substring')
subdir('knuth-morris-pratt')
subdir('lexicographical-merge')
subdir('longest-prefix')
subdir('longest-prefix-suffix')
subdir('lps')
subdir('lrf')
subdir('make-anagram')
subdir('manacher')
subdir('maximum-palindromes')
subdir('perf')
subdir('reduced-string')
subdir('tandem-arrays')
subdir('two-characters')
