blob_example = executable('blob', ['blob.cc'],
    include_directories : includes,
    dependencies : [ boost_deps, benchmark_dep, range_dep ],
    install : false)

subgraph_example = executable('subgraph', ['subgraph.cc'],
    include_directories : includes,
    dependencies : [ boost_deps, benchmark_dep, range_dep ],
    install : false)
